--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
       </div>
       <div id="weather-data" class="hide">
-        <h2><i class="fa-solid fa-location-dot"></i> <span id="city"></span> <img  id="country"></img></h2>
+        <h2><i class="fa-solid fa-location-dot"></i> <span id="city"></span> <img  id="country" crossorigin="anonymous"></img></h2>
         <p id="temperature"><span></span>&deg;C</p>
         <div id="description-container">
           <p id="description"></p>
